--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <ul>
       <li>...</li>
     </ul>
-     <link >Read my blog `<a href="https://mwendeb.github.io/News-Website/">here</a>`</link>`
+     <link >Read my blog `<a href="blog.html">here</a>`</link>`
   </aside>
 </main>
