--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
   </p>
   <p>
     <strong>Want to be part of this journey?</strong>
-    <a href="register.html">Register Here</a>
+    <a href="Index1.html">Register Here</a>
   </p>
 </body>
 </html>
